--- a/ashwin.html
+++ b/ashwin.html
@@ -45,6 +45,9 @@
     <input type="text" name="url" class="input" placeholder="  Enter a valid URL" required><br>
     <input class="submit"type="submit" id="submit" value="Generate">
     </form>
+    <br><br>
+    <img src="qr.jpg" alt="image">
     </div>
+
 </body>
 </html>
