--- a/ashwin.html
+++ b/ashwin.html
@@ -23,15 +23,23 @@
             background-color: #C5DFF8;
         }
         .input{
-            height: 2rem;
+            height: 3rem;
             width: 15rem;
             background-color: whitesmoke;
             border: 0.1rem solid black;
-            border-radius: 1rem 0;
+            border-radius: 0.6rem;
         }
         .submit{
             margin-top: 1rem;
             background-color: #99DBF5;
+            height: 2rem;
+            width: 6rem;
+            border-radius: 1rem;
+        }
+        .submit:hover{
+            margin-top: 1rem;
+            background-color: black;
+            color: white;
             height: 2rem;
             width: 6rem;
             border-radius: 1rem;
